added RBAC to routes

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,5 +1,41 @@
 {
     "navigationFallback": {
         "rewrite": "/index.html"
+    },
+    "routes": [
+        {
+            "route": "/admin",
+            "allowedRoles": [ "admin" ]
+        },
+        {
+            "route": "/beast",
+            "allowedRoles": [ "Beast.Mode" ]
+        },
+        
+        {
+            "route": "/authenticated",
+            "allowedRoles": [ "authenticated" ]
+        }
+    ],
+    "auth": {
+        "rolesSource": "/api/appRolesReact",
+        "identityProviders": {
+            "azureActiveDirectory": {
+                "userDetailsClaim": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
+                "registration": {
+                    "openIdIssuer": "https://login.microsoftonline.com/a4b2de60-9bd7-43fa-8c11-911b09749203",
+                    "clientIdSettingName": "AAD_CLIENT_ID",
+                    "clientSecretSettingName": "AAD_CLIENT_SECRET"
+                },
+                "login": {
+                    "loginParameters": [
+                        "resource=https://graph.microsoft.com"
+                    ]
+                }
+            }
+        }
+    },
+    "globalHeaders": {
+        "Cache-Control": "no-cache"
     }
 }
