oopsie forgot to add rolesSource

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -18,6 +18,7 @@
         }
     ],
     "auth": {
+        "rolesSource": "/api/appRolesReact",
         "identityProviders": {
         "customOpenIdConnectProviders": {
             "aadb2c": {
