--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -5,7 +5,7 @@
     "routes": [
         {
             "route": "/",
-            "allowedRoles": [ "anonymous" ]
+            "allowedRoles": [ "anonymous", "authenticated" ]
         },
         {
             "route": "/admin",
@@ -37,7 +37,7 @@
             },
             "login": {
                 "nameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
-                "scopes": [],
+                "scopes": ["openid", "profile", "email"],
                 "loginParameterNames": []
             }
             }
