--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -36,8 +36,8 @@
                 }
             },
             "login": {
-                "nameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
-                "scopes": ["openid", "profile", "email"],
+                "nameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/email",
+                "scopes": ["openid", "profile"],
                 "loginParameterNames": []
             }
             }
