--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -24,24 +24,19 @@
     "auth": {
         "rolesSource": "/api/appRolesReact",
         "identityProviders": {
-        "customOpenIdConnectProviders": {
-            "aadb2c": {
-            "registration": {
-                "clientIdSettingName": "AADB2C_PROVIDER_CLIENT_ID",
-                "clientCredential": {
-                "clientSecretSettingName": "AADB2C_PROVIDER_CLIENT_SECRET"
+            "azureActiveDirectory": {
+                "userDetailsClaim": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
+                "registration": {
+                    "openIdIssuer": "https://login.microsoftonline.com/a4b2de60-9bd7-43fa-8c11-911b09749203",
+                    "clientIdSettingName": "AADB2C_PROVIDER_CLIENT_ID",
+                    "clientSecretSettingName": "AADB2C_PROVIDER_CLIENT_SECRET"
                 },
-                "openIdConnectConfiguration": {
-                "wellKnownOpenIdConfiguration": "https://approlesdemob2c.b2clogin.com/approlesdemob2c.onmicrosoft.com/B2C_1_approlesdemob2c/v2.0/.well-known/openid-configuration"
+                "login": {
+                    "loginParameters": [
+                        "resource=https://graph.microsoft.com"
+                    ]
                 }
-            },
-            "login": {
-                "nameClaimType": "email",
-                "scopes": ["openid", "profile", "offline_access"],
-                "loginParameterNames": []
             }
-            }
-        }
         }
     },
     "globalHeaders": {
